Fixes product page spacing

--- a/src/pages/ProductPage/Product.module.scss
+++ b/src/pages/ProductPage/Product.module.scss
@@ -64,7 +64,7 @@
 
     @media only screen and (max-width: 900px) {
       position: relative;
-      padding-bottom: 100px;
+      padding: 32px 24px 150px;
     }
 
     .description {
